<resources>
    <string name="app_name">BellsMemo</string>
    <string name="bell_s_memo">Bell\'s Memo</string>
    <string name="write_memo">Write Memo</string>
    <string name="add_title">add_title</string>
    <string name="title">제목</string>
    <string name="add_note">새 노트</string>
    <string name="content">내용</string>
    <string name="delete">삭제</string>
    <string name="search_hint">검색어를 입력하세요</string>
</resources>