<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7DBDB"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7DBDB"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/goMain2"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:scaleType="centerInside"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bell_s_memo"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/mainToolbar"
            app:layout_constraintEnd_toEndOf="@+id/mainToolbar"
            app:layout_constraintStart_toStartOf="@+id/mainToolbar"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar">

        <TextView
            android:id="@+id/titleMemo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/contentMemo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/superLightGrey"
        android:contentDescription="@string/content"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:singleLine="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>