<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E7DBDB"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/goMain"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:scaleType="centerInside"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_note"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <ImageView
            android:layout_gravity="end"
            android:id="@+id/addNoteIv"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_check_black_24dp"
            android:scaleType="centerInside"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="16dp"
        android:id="@+id/titleLayout"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/contentEt"
        android:layout_width="0dp"
        android:layout_height="78dp">

        <TextView
            android:id="@+id/titleMemo"
            app:layout_constraintStart_toStartOf="@+id/titleLayout"
            app:layout_constraintEnd_toStartOf="@+id/titleEt"
            app:layout_constraintHorizontal_weight=".15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:gravity="end|center"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:labelFor="@+id/titleEt"
            android:id="@+id/titleEt"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/titleMemo"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_weight=".8"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/titleEt"
            app:layout_constraintEnd_toEndOf="@+id/titleLayout"
            app:layout_constraintHorizontal_weight=".05"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/contentEt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/superLightGrey"
        android:hint="메모를 작성하세요."
        android:inputType="textMultiLine"
        android:labelFor="@+id/contentEt"
        android:padding="16dp"
        android:singleLine="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
